# flask_proj

./: .gitignore
dashboard/: .env  .flaskenv  conf  pyproject.toml  wsgi.py
dashboard/dashboard/: __init__.py  extension.py  forms.py  models.py  settings.py  utils.py
dashboard/dashboard/blueprints/: __init__.py  auth.py  task.py
dashboard/dashboard/static/css/: styles.css
dashboard/dashboard/tasks/: __init__.py  demo.py  locust.py  spark.py  utils.py
dashboard/dashboard/templates/: _footer.html  _sidebar.html  base.html  help.html  index.html  macros.html  submit.html
dashboard/dashboard/templates/auth/: base.html  login.html  register.html
dashboard/migrations/versions/: 2556d941f07e_.py  8678136e6612_.py
fancy_flaskr/: pyproject.toml
fancy_flaskr/flaskr/: __init__.py  extension.py  settings.py
fancy_flaskr/flaskr/blueprints/: auth.py  blog.py
fancy_flaskr/flaskr/static/: style.css
fancy_flaskr/flaskr/templates/: base.html  macros.html
fancy_flaskr/flaskr/templates/auth/: login.html  register.html
fancy_flaskr/flaskr/templates/blog/: create.html  index.html  update.html
fancy_flaskr/tests/: conftest.py  test_auth.py  test_cli.py  test_factory.py  test_post.py
flaskr/: MANIFEST.in  pyproject.toml  setup.py
flaskr/flaskr/: __init__.py  auth.py  blog.py  schema.sql
flaskr/flaskr/templates/: base.html  index.html
flaskr/flaskr/templates/auth/: login.html  register.html
flaskr/flaskr/templates/blog/: create.html  index.html  update.html
flaskr/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py
quickstart/: .flaskenv  hello.py  pyproject.toml
quickstart/templates/: 404.html  hello.html
