[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Neophyliam <727549953@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
celery = {extras = ["redis"], version = "^4.4.2"}
python-dotenv = "^0.13.0"
flask-sqlalchemy = "^2.4.1"
flask_wtf = "^0.14.3"
flask_login = "^0.5.0"
flask_migrate = "^2.5.3"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]
faker = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
