[tool.poetry]
name = "fancy_flaskr"
version = "0.1.0"
description = "Yet another flaskr application built with awesome flask extensions."
authors = ["neothenil <727549953@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
python-dotenv = "^0.12.0"
flask-sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = "^5.0.4"
faker = "^4.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
