[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = ""
authors = ["neothenil <727549953@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
